<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Companion Browser</string>
    <string name="search_text_input_hint">Enter search term or URL</string>
    <string name="clear_search_text_button">Clear input</string>
    <string name="menu_button">Menu</string>
    <string name="action_reload">Reload website</string>
    <string name="action_share">Share</string>
    <string name="action_new_window">New window</string>
    <string name="action_open_with_app">Open in default app</string>
    <string name="action_toggle_ad_blocking">Ad blocking</string>
    <string name="action_add_shortcut">Add shortcut</string>
    <string name="settings">Settings</string>
    <string name="action_set_night_mode">App theme</string>
    <string name="action_night_mode_off">Light</string>
    <string name="action_night_mode_on">Dark</string>
    <string name="action_night_mode_auto">System default</string>
    <string name="action_set_start_page">Set custom start page</string>
    <string name="action_set_search_engine">Search engine</string>
    <string name="string_action_set_bing">Bing</string>
    <string name="string_action_set_brave">Brave Search</string>
    <string name="string_action_set_duckduckgo">DuckDuckGo</string>
    <string name="string_action_set_google">Google</string>
    <string name="string_action_set_startpage_search">Startpage</string>
    <string name="settings_saved">Settings saved</string>
    <string name="action_clear_data">Clear browsing data</string>
    <string name="action_close_window">Close window</string>
    <string name="ad_blocking_disabled">Ad blocking disabled</string>
    <string name="ad_blocking_enabled">Ad blocking enabled</string>
    <string name="add_shortcut_input_hint">Shortcut name</string>
    <string name="shortcuts_not_supported">Your launcher does not support shortcuts</string>
    <string name="set_start_page_hint">Start page URL</string>
    <string name="start_page_saved">Start page saved</string>
    <string name="clear_data_message">All browsing data like cookies and cache will be cleared</string>
    <string name="clear_data_confirmation">Browsing data cleared</string>
    <string name="chooser_share">Share URL</string>
    <string name="chooser_open_app">Choose app</string>
    <string name="url_cannot_be_loaded">URL cannot be loaded</string>
    <string name="download_started">Download started</string>
    <string name="add">Add</string>
</resources>
