<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share" />

    <item
        android:id="@+id/action_new_window"
        android:title="@string/action_new_window" />

    <item
        android:id="@+id/action_open_with_app"
        android:title="@string/action_open_with_app" />

    <item
        android:id="@+id/action_add_shortcut"
        android:title="@string/action_add_shortcut" />

    <item
        android:id="@+id/action_toggle_ad_blocking"
        android:checkable="true"
        android:checked="true"
        android:title="@string/action_toggle_ad_blocking" />

    <item
        android:id="@+id/action_close_window"
        android:title="@string/action_close_window" />

</menu>
