<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimary"
    tools:showIn="@layout/activity_main">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="true"
        android:layout_margin="8dp"
        android:layout_toStartOf="@+id/menuButton"
        app:cardBackgroundColor="@color/colorPrimaryVariant"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/webViewControlButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/webview_control_button"
                app:srcCompat="@drawable/ic_cancel" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchTextInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignWithParentIfMissing="true"
                android:layout_toStartOf="@+id/clearSearchTextButton"
                android:layout_toEndOf="@+id/webViewControlButton"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:imeOptions="actionSearch"
                android:inputType="textUri"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/clearSearchTextButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/clear_search_text_button"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_cancel" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-8dp"
        android:adjustViewBounds="true"
        android:background="?attr/actionBarItemBackground"
        android:contentDescription="@string/menu_button"
        app:srcCompat="@drawable/ic_more" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:progress="50" />

</RelativeLayout>
